--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
+body {
+    background-image: url("https://static3.depositphotos.com/1000152/120/i/600/depositphotos_1207688-stock-photo-clouds.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
-/* 
+.div-main {
+    display: flex;
+    
+}
+.second-div{
+    margin:0px auto;
+    margin-top: 150px;
+    padding: 10px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+p {
+    color: red;
+}
